# neurosign

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.kiro/specs/neurosign/: .config.kiro  design.md  requirements.md  (+1 more)
.kiro/specs/neurosign-dual-stream/: .config.kiro
apps/backend/: Dockerfile  pyproject.toml
apps/backend/neurosign_backend/: main.py
apps/backend/neurosign_backend/adapters/: config.py  onnx_adapter.py  ws_adapter.py
apps/backend/neurosign_backend/application/: run_inference.py  sliding_window.py
apps/backend/neurosign_backend/domain/: entities.py  ports.py
apps/backend/tests/: test_integration.py
apps/frontend/: Dockerfile  index.html  package-lock.json  package.json
ml-lab/: package-lock.json  pyproject.toml
ml-lab/checkpoints/: metrics.csv
ml-lab/checkpoints/tb_logs/: events.out.tfevents.1776311438.MacBook-Air-de-Brenno.local.63907.0  events.out.tfevents.1776311540.MacBook-Air-de-Brenno.local.64283.0  events.out.tfevents.1776311587.MacBook-Air-de-Brenno.local.64688.0  events.out.tfevents.1776311624.MacBook-Air-de-Brenno.local.65017.0
ml-lab/checkpoints_holistic/: metrics.csv
ml-lab/checkpoints_holistic/tb_logs/: events.out.tfevents.1776316633.MacBook-Air-de-Brenno.local.68155.0
ml-lab/neurosign_ml/data/: augment.py  dataset.py  download.py  extract_landmarks.py  filter.py  normalize.py  split.py
ml-lab/neurosign_ml/export/: __init__.py  benchmark.py  export_onnx.py  quantize.py  run_export.py  validate.py
ml-lab/neurosign_ml/models/: bilstm_attention.py
ml-lab/neurosign_ml/training/: train.py  trainer.py
(+11 files in other folders)
