[project]
name = "neurosign-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "kaggle>=1.6.0",
    "tensorboard>=2.14.0",
    "onnxscript>=0.6.2",
    "mediapipe==0.10.9",
    "opencv-python>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
